--- a/describe_cases/growth_rate_week_i2extras.qmd
+++ b/describe_cases/growth_rate_week_i2extras.qmd
@@ -38,7 +38,7 @@ data(ebola_sim_clean)
 linelist <- ebola_sim_clean$linelist
 
 # Read linelist data
-linelist
+as_tibble(linelist)
 
 # Get an incidence2 object with case counts per week
 # from data collected per day
