reduce persona description

--- a/about.qmd
+++ b/about.qmd
@@ -13,7 +13,7 @@ In the creation of these materials, we though in:
 -   __Juan__, a Statistician. He supports the data analysis tasks in the outbreak response team of a National Health Agency. He wants quick code solutions reminders for outbreak analytics. [Read more about Juan](https://epiverse-trace.github.io/personas/juan-datero.html).
 -   __Patricia__, a PhD student. She has a Master in Epidemiology with a focus on Modelling of Infectious Diseases Dynamics using MATLAB. She wants to translate theory to practice with R. [Read more about Patricia](https://epiverse-trace.github.io/personas/patricia-discoverer.html).
 <!-- -   Celina, a Post-doc and fluent R user who needs to keep up-to-date with the latest package developments. -->
-- __Danielle__, an Instructor. She has outbreak analytics experience at the Ministry of Health and now develops training materials for her colleagues. She wants to remix content to create specific training materials for public health practitioners like Field epidemiologists and research degree students. [Read more about Danielle](https://epiverse-trace.github.io/personas/danielle-entretrainer.html).
+- __Danielle__, an Instructor. She develops training materials for her colleagues at the Ministry of Health. She wants to remix content to create specific training materials for public health practitioners like Field epidemiologists and research degree students. [Read more about Danielle](https://epiverse-trace.github.io/personas/danielle-entretrainer.html).
 
 ## Design Principles
 
