--- a/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
+++ b/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
@@ -42,11 +42,14 @@ linelist <- ebola_sim_clean$linelist
 incidence_data <- incidence::incidence(linelist$date_of_onset)
 
 # Extract parameter by disease, distribution, author
-epidist_ebola <- epidist_db(
-  disease = "Ebola",
-  epi_dist = "serial_interval",
-  author = "WHO_Ebola_Response_Team"
-)
+epidist_ebola <- 
+  epiparameter::epiparam() %>% 
+  filter(str_detect(disease,"Ebola")) %>% 
+  filter(epi_distribution == "serial_interval") %>% 
+  filter(region == "West Africa") %>% 
+  filter(author == "WHO_Ebola_Response_Team") %>% 
+  filter(year == 2015) %>% 
+  epiparameter::as_epidist()
 
 # Estimate the time-varying reproduction number
 epiestim_output <- estimate_R(
