steps in detail is optional

--- a/internal/template-package_action.qmd
+++ b/internal/template-package_action.qmd
@@ -32,6 +32,8 @@ immunization_effect
 
 ## Steps in detail
 
+<!-- OPTIONAL -->
+
 <!-- reduce length of strings with a large language model like chatgpt -->
 
 - `tidyverse` package is loaded to manage data frame objects.
