--- a/about.qmd
+++ b/about.qmd
@@ -4,9 +4,9 @@ title: "About"
 
 ## What are the key principles of a How-to guide?
 
-How-to guides will help you complete a specific outbreak analytic task following concrete steps to solve a real-world problem.
+[How-to guides](https://diataxis.fr/how-to-guides/) are directions that guide the reader through a problem or towards a result. How-to guides are goal-oriented.
 
-A [how to-guide](https://diataxis.fr/how-to-guides/#key-principles) is concerned with work - a task or problem, with a practical goal. Maintain focus on that goal.
+A [How-to guide](https://diataxis.fr/how-to-guides/#key-principles) is concerned with work - a task or problem, with a practical goal. Maintain focus on that goal.
 
 A how-to guide serves the work of the already-competent user, whom you can assume to know what they want to do, and to be able to follow your instructions correctly.
 
