--- a/about.qmd
+++ b/about.qmd
@@ -2,11 +2,11 @@
 title: "About"
 ---
 
-## What are the key principles of a How-to guide?
+## What is a How-to guide?
 
 [How-to guides](https://diataxis.fr/how-to-guides/) are directions that guide the reader through a problem or towards a result. How-to guides are goal-oriented.
 
-A [How-to guide](https://diataxis.fr/how-to-guides/#key-principles) is concerned with work - a task or problem, with a practical goal. Maintain focus on that goal.
+A how-to guide is concerned with work - a task or problem, with a practical goal. Maintain focus on that goal.
 
 A how-to guide serves the work of the already-competent user, whom you can assume to know what they want to do, and to be able to follow your instructions correctly.
 
