--- a/about.qmd
+++ b/about.qmd
@@ -21,6 +21,7 @@ In the creation of these materials, we though in:
 
 ## Design Principles
 
+- Showcase `R` package integration options within the Outbreak analytics ecosystem.
 - Provide a ["How-to" guides](https://documentation.divio.com/how-to-guides/) as single point solutions to specific problems.
 - Add links to related [Explanation](https://documentation.divio.com/explanation/) documentation.
 - Leverage the ecosystem: Facilitate the Accessibility to the Outbreak analytics ecosystem by using the Tidyverse. This provides a consistent and smoother learning experience to users. Aligned with the [datasciencebox design principles](https://datasciencebox.org/01-design-principles.html#leverage-the-ecosystem) and [FAIR principles for software ecosystems](https://onlinelibrary.wiley.com/doi/full/10.1111/gcb.15409).
