add knit options to get one copy/paste chunk (#43)

--- a/analyses/describe_cases/incidence_week_day.qmd
+++ b/analyses/describe_cases/incidence_week_day.qmd
@@ -11,6 +11,13 @@ toc: true
 toc_float: true
 ---
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 ## Ingredients
 
 - Get weekly case counts from daily collected data.
