--- a/analyses/forecast_cases/projections_incidence_epitrix.qmd
+++ b/analyses/forecast_cases/projections_incidence_epitrix.qmd
@@ -11,6 +11,13 @@ toc: true
 toc_float: true
 ---
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 ## Ingredients
 
 - Project the future daily incidence based of past incidence, a selection of plausible basic reproduction numbers, and the distribution of the serial interval, using the `{projections}` package.
