--- a/analyses/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
+++ b/analyses/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
@@ -11,6 +11,13 @@ toc: true
 toc_float: true
 ---
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 ## Ingredients
 
 - Use the `linelist` object in the `ebola_sim_clean` list from the `{outbreaks}` R package. `linelist` is an outbreak data set. 
