--- a/analyses/describe_cases/growth_rate_week_i2extras.qmd
+++ b/analyses/describe_cases/growth_rate_week_i2extras.qmd
@@ -11,6 +11,13 @@ toc: true
 toc_float: true
 ---
 
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
 ## Ingredients
 
 - Calculate the weekly growth rate from daily collected data.
