--- a/analyses/quantify_transmission/reproduction_number_serological_data.qmd
+++ b/analyses/quantify_transmission/reproduction_number_serological_data.qmd
@@ -30,9 +30,6 @@ library(socialmixr)
 library(dplyr)
 ```
 
-
-## Data
-We use serological data from the 2009 pandemic in Hong Kong in [Kwok et al (2009)](https://royalsocietypublishing.org/doi/10.1098/rspb.2014.0709), and social mixing data from POLYMOD in the UK as an assumed contact matrix.
 ```{r}
 # Load serological data
 hk_serology = read_csv("https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4100506/bin/rspb20140709supp2.csv")
@@ -51,11 +48,7 @@ contact_data <- contact_matrix(
 )
 
 demography_vector = contact_data$demography$population
-```
 
-## Likelihood
-We define the likelihood of observing a given serological pattern by simulating age-specific final epidemic size using the `finalsize` package.
-```{r}
 # Define model
 model_function <- function(param){
   r0 <- param[1]
@@ -111,13 +104,8 @@ likelihood_function <- function(param,data) {
   # Return log-posterior (log-likelihood + log-prior)
   return(log_likelihood_total + log_prior)
 }
-```
 
-## MCMCpack
-
-We use [{MCMCpack}](https://cran.r-project.org/web/packages/MCMCpack/index.html) to estimate the parameters using MCMC.
-
-```{r MCMCpack-run, message=FALSE, warning=FALSE, fig.width=7, fig.height=6}
+## Set up MCMCpack
 initial_param <- c(r0=1.5, alpha=0.8) # Initial guess for shape and rate
 
 n_mcmc <- 1000
@@ -128,10 +116,7 @@ output <- MCMCmetrop1R(fun = likelihood_function,
                        burnin = 100, # Burn-in period
                        verbose = TRUE,
                        data = hk_serology) # Turn off verbose output
-```
 
-Finally, we plot the observed outputs against the model fits:
-```{r}
 # Plot outputs
 data_summary <- aggregate(ffold ~ age_group, hk_serology, function(x){mean(x == 1)})
 
@@ -157,4 +142,7 @@ points(data_summary$ffold,pch=19,col="red")
 ```
 
 ## Steps in detail
-(to come)
+- We use serological data from the 2009 pandemic in Hong Kong in [Kwok et al (2009)](https://royalsocietypublishing.org/doi/10.1098/rspb.2014.0709), and social mixing data from POLYMOD in the UK as an assumed contact matrix using `socialmixr`.
+- We define the likelihood of observing a given serological pattern by simulating age-specific final epidemic size using the `finalsize` package.
+- We use [{MCMCpack}](https://cran.r-project.org/web/packages/MCMCpack/index.html) to estimate the parameters using MCMC.
+- Finally, we plot the observed outputs against the model fits.
