--- a/analyses/reconstruct_transmission/estimate_infections.qmd
+++ b/analyses/reconstruct_transmission/estimate_infections.qmd
@@ -1,5 +1,5 @@
 ---
-title: "How to estimate R and k from cluster size data using Markov chain Monte Carlo?"
+title: "How to reconstruct infection dynamics from incidence data on delayed outcomes like deaths"
 format: 
   html:
     code-link: true
@@ -35,15 +35,11 @@ library(epiparameter)
 library(dplyr) # required to format outputs
 library(httr) # required to load UK COVID data from URL
 library(cfr) # required for Ebola data (included in this package)
-```
 
-## Example 1: reconstruct SARS-CoV-2 infection dynamics in the UK from daily data on deaths, 2020
+# - - - 
+# Example 1: reconstruct SARS-CoV-2 infection dynamics in the UK from daily data on deaths, 2020
+# - - -
 
-### Load UK data
-
-We load daily data on reported COVID deaths from the [UK COVID dashboard](https://coronavirus.data.gov.uk/details/deaths?areaType=overview&areaName=United%20Kingdom) by copying the 'download data as csv' link, then using the `httr` package to import into R and format as a `data.frame`. The `EpiNow2` package expects data in a two column format with names `date` and `confirm` so we format the imported data accordingly.
-
-```{r}
 # Define URL for the UK COVID dashboard API
 uk_dashboard_url <- "https://coronavirus.data.gov.uk/api/v1/data?filters=areaType=overview;areaName=United%2520Kingdom&structure=%7B%22areaType%22:%22areaType%22,%22areaName%22:%22areaName%22,%22areaCode%22:%22areaCode%22,%22date%22:%22date%22,%22newDailyNsoDeathsByDeathDate%22:%22newDailyNsoDeathsByDeathDate%22,%22cumDailyNsoDeathsByDeathDate%22:%22cumDailyNsoDeathsByDeathDate%22%7D&format=csv"
 
@@ -63,13 +59,8 @@ incidence_data <- incidence_data |>
 
 # Preview data
 head(incidence_data)
-```
 
-### Define parameters
-
-Next, we import an estimate of the COVID incubation period (i.e. delay from infection to symptom onset) and onset-to-death distributions from `epiparameter`, then combine these two distributions to specify the infection-to-death distribution and plot the result:
-
-```{r}
+# Define parameters
 # Extract infection-to-death distribution (from Aloon et al)
 incubation_period_in <-
   epiparameter::epidist_db(disease = "covid",epi_dist = "incubation",single_epidist = T)
@@ -109,13 +100,7 @@ infection_to_death <- incubation_period + onset_to_death_period
 
 # Plot underlying delay distributions
 plot(infection_to_death)
-```
 
-**Note: can streamline above as new epiparameter functionality comes through**
-
-For EpiNow2, we also need to define the timescale of the epidemic, i.e. the delay from one infection to the next. We can use serial interval (delay from onset of infector to onset of infectee) as a proxy for this if we assume that the variance of the incubation period of the infector is independent of the variance of the time from onset of symptoms in the infector to infection of the infectee ([Lehtinen et al, JR Soc Interface, 2021](https://royalsocietypublishing.org/doi/10.1098/rsif.2020.0756)).
-
-```{r}
 # Extract serial interval distribution distribution (from Yang et al)
 serial_interval_in <-
   epiparameter::epidist_db(
@@ -141,15 +126,7 @@ serial_interval_covid <- LogNormal(
   sd = serial_params[["sd"]],
   max = serial_int_discrete_max
 )
-```
 
-**Notes: Serial interval defined via discrete mean and sd rather than continuous meanlog and sdlog - how could potential for error in user inputs be reduced here?**
-
-### Run model
-
-To reconstruct infection dynamics from deaths, we use a non-mechanistic infection model (see the ["estimate_infections()"](https://epiforecasts.io/EpiNow2/articles/estimate_infections.html) vignette for more details of this model, which uses a [Gaussian Process implementation](https://epiforecasts.io/EpiNow2/articles/gaussian_process_implementation_details.html)). Because this model does not calculate the time varying reproduction number $R_t$, it can be run by setting `rt=NULL` in the main `epinow()` function (which calls `estimate_infections()` in the background).
-
-```{r}
 # Run infection estimation model
 epinow_estimates <- epinow(
   reported_cases = incidence_data, # time series data
@@ -164,10 +141,9 @@ epinow_estimates <- epinow(
 
 # Extract infection estimates from the model output
 infection_estimates <- epinow_estimates$estimates$summarised |> dplyr::filter(variable=="infections")
-```
 
-### Plot comparison of observed outcomes and estimated infections
-```{r class.source = 'fold-hide', class.source = 'fold-hide', fig.cap="Estimated dynamics of SARS-CoV-2 infections among those with subsequent fatal outcomes in the UK, reconstructed using data on reported deaths. Dashed lines show dates of UK non-essential contact advice (16 Mar) and lockdown (23 Mar)."}
+# Plot output
+# "Estimated dynamics of SARS-CoV-2 infections among those with subsequent fatal outcomes in the UK, reconstructed using data on reported deaths. Dashed lines show dates of UK non-essential contact advice (16 Mar) and lockdown (23 Mar)."
 par(mfrow=c(1,1),mgp=c(2.5,0.7,0),mar = c(3,3.5,1,1))
 plot(incidence_data$date,incidence_data$confirm,ylim=c(0,2e3),col="red",xlab="",ylab="count",type="l",lwd=2,
      xlim=c(as.Date("2020-03-01"),as.Date("2020-07-01")))
@@ -184,15 +160,11 @@ abline(v = as.Date("2020-03-16"),lty=2)
 abline(v = as.Date("2020-03-23"),lty=2) 
 ```
 
-## Example 2: Reconstruct Ebola infection dynamics in the UK from data on deaths, 1976
-
-### Load Ebola data
-
-As a second example, we will repeat the analysis, but using data on onset dates from the first recorded outbreak in Yambuku, 1976 ([Camacho et al, Epidemics, 2014](https://pubmed.ncbi.nlm.nih.gov/25480136/)).
-
-This outbreak starts with a single case identified on 25th August 1976, then no further cases until 1st September, after which cases continue to be reported. We therefore focus on the period after 1st September, because it can be challenging for EpiNow2 to estimate dynamics when there is a prolonged initial period of zero counts.
-
 ```{r}
+# - - - 
+# Example 2: Reconstruct Ebola infection dynamics in the UK from data on deaths, 1976
+# - - - 
+
 # Load Ebola data from the CFR package
 data("ebola1976")
 
@@ -203,13 +175,7 @@ incidence_data_ebola <- incidence_data_ebola |> dplyr::filter(date>="1976-09-01"
 
 # Preview data
 head(incidence_data_ebola)
-```
 
-### Define parameters
-
-Next, we import an estimate of the Ebola incubation period that we will use to reconstruct infections. This time, the extracted parameter follows a gamma distribution, so we use the `Gamma()` function in `EpiNow2`.
-
-```{r}
 # Extract infection-to-death distribution (from WHO Ebola Response Team)
 incubation_period_ebola_in <-
   epiparameter::epidist_db(disease = "ebola",epi_dist = "incubation",single_epidist = T)
@@ -229,11 +195,7 @@ incubation_period_ebola <- Gamma(shape = incubation_ebola_params[["shape"]],
 
 # Plot delay distribution
 plot(incubation_period_ebola)
-```
 
-Next, we define the timescale of the epidemic:
-
-```{r}
 # Extract serial interval distribution distribution (from WHO Ebola Response Teaml)
 serial_interval_ebola_in <-
   epiparameter::epidist_db(
@@ -259,19 +221,13 @@ serial_interval_ebola <- Gamma(
   rate = 1/serial_ebola_params[["scale"]],
   max = serial_int_ebola_discrete_max
 )
-```
 
-### Run model
-
-With parameters defined, we reconstruct infection timings from the case onset data. Because there are relatively low numbers of cases, the non-mechanistic model can be unstable, so we remove the `rt=NULL` argument to reconstruct infections using model of the transmission process based on a ["renewal equation"](https://epiforecasts.io/EpiNow2/articles/estimate_infections.html).
-
-```{r}
 # Run infection estimation model
 epinow_estimates <- epinow(
   reported_cases = incidence_data_ebola, # time series data
   generation_time = generation_time_opts(serial_interval_ebola), # assume generation time = serial interval
   delays = delay_opts(incubation_period_ebola), # delay from infection-to-death
-  # rt = NULL, # comment out to implement Rt estimation
+  rt = NULL, # comment out to implement Rt estimation
   backcalc = backcalc_opts(prior = "none"), # use zero-centered prior instead of one centered around shifted reported cases
   stan = stan_opts( # set up options for inference
     cores = 4, samples = 1000, chains = 3,
@@ -281,12 +237,10 @@ epinow_estimates <- epinow(
 
 # Extract infection estimates from the model output
 infection_estimates <- epinow_estimates$estimates$summarised |> dplyr::filter(variable=="infections")
-```
 
-**Notes: the estimated infections seem to increase exponentially, rather than track cases with a delay as we'd expect.**
+# Plot output
+#"Estimated dynamics of Ebola infections among those with subsequent onsets in the 1976 Yambuku outbreak, reconstructed using reported case data. Dashed line shows the date on which the local hospital - and source of early nosocomial infections - was closed (30 Sep)."
 
-### Plot comparison of observed outcomes and estimated infections
-```{r class.source = 'fold-hide', class.source = 'fold-hide', fig.cap="Estimated dynamics of Ebola infections among those with subsequent onsets in the 1976 Yambuku outbreak, reconstructed using reported case data. Dashed line shows the date on which the local hospital - and source of early nosocomial infections - was closed (30 Sep)."}
 par(mfrow=c(1,1),mgp=c(2.5,0.7,0),mar = c(3,3.5,1,1))
 plot(incidence_data_ebola$date,incidence_data_ebola$confirm,ylim=c(0,20),col="red",xlab="",ylab="count",type="l",lwd=2,
      xlim=c(as.Date("1976-08-25"),as.Date("1976-11-05")))
@@ -301,3 +255,16 @@ legend("topright", c("Infections", "Cases"),
 # add date of local hospital closure
 abline(v = as.Date("1976-09-30"),lty=2) 
 ```
+
+## Steps in detail
+- *Example 1* aims to reconstruct SARS-CoV-2 infection dynamics in the UK from daily data on deaths
+- First, we load daily data on reported COVID deaths from the [UK COVID dashboard](https://coronavirus.data.gov.uk/details/deaths?areaType=overview&areaName=United%20Kingdom) by copying the 'download data as csv' link, then using the `httr` package to import into R and format as a `data.frame`. 
+- The `EpiNow2` package expects data in a two column format with names `date` and `confirm` so we format the imported data accordingly.
+- Next, we import an estimate of the COVID incubation period (i.e. delay from infection to symptom onset) and onset-to-death distributions from `epiparameter`, then combine these two distributions to specify the infection-to-death distribution and plot the result.
+- For EpiNow2, we also need to define the timescale of the epidemic, i.e. the delay from one infection to the next. We can use serial interval (delay from onset of infector to onset of infectee) as a proxy for this if we assume that the variance of the incubation period of the infector is independent of the variance of the time from onset of symptoms in the infector to infection of the infectee ([Lehtinen et al, JR Soc Interface, 2021](https://royalsocietypublishing.org/doi/10.1098/rsif.2020.0756)).
+- To reconstruct infection dynamics from deaths, we use a non-mechanistic infection model (see the ["estimate_infections()"](https://epiforecasts.io/EpiNow2/articles/estimate_infections.html) vignette for more details of this model, which uses a [Gaussian Process implementation](https://epiforecasts.io/EpiNow2/articles/gaussian_process_implementation_details.html)). Because this model does not calculate the time varying reproduction number $R_t$, it can be run by setting `rt=NULL` in the main `epinow()` function (which calls `estimate_infections()` in the background).
+- For *Example 2*, we will repeat the analysis, but using data on onset dates from the first recorded outbreak in Yambuku, 1976 ([Camacho et al, Epidemics, 2014](https://pubmed.ncbi.nlm.nih.gov/25480136/)). This outbreak starts with a single case identified on 25th August 1976, then no further cases until 1st September, after which cases continue to be reported. We therefore focus on the period after 1st September, because it can be challenging for EpiNow2 to estimate dynamics when there is a prolonged initial period of zero counts.
+- Next, we import an estimate of the Ebola incubation period that we will use to reconstruct infections. This time, the extracted parameter follows a gamma distribution, so we use the `Gamma()` function in `EpiNow2`.
+- Next, we define the timescale of the epidemic by defining the serial interval.
+- With parameters defined, we reconstruct infection timings from the case onset data. Because there are relatively low numbers of cases, the non-mechanistic model can be unstable, so we remove the `rt=NULL` argument to reconstruct infections using model of the transmission process based on a ["renewal equation"](https://epiforecasts.io/EpiNow2/articles/estimate_infections.html).
+- Plot comparison of observed outcomes and estimated infections
