--- a/analyses/simulate_transmission/epidemics_odin_interop.qmd
+++ b/analyses/simulate_transmission/epidemics_odin_interop.qmd
@@ -65,7 +65,7 @@ This is an SIR model that omits the 'exposed' compartment for this demonstration
 sir <- odin::odin({
   # NOTE: crude time-dependence of transmission rate
   # similar to a `<rate_intervention>`
-  beta_ <- if (t > 210 && t < 300) beta * (1.0 - reduction) else beta
+  beta_ <- if (t > intervention_interval[1] && t < intervention_interval[2]) beta * (1.0 - reduction) else beta
 
   # number of age groups taken from contact matrix passed by user
   n <- user()
@@ -93,6 +93,7 @@ sir <- odin::odin({
   init_I[] <- user()
   init_R[] <- user()
   reduction <- user(0.5)
+  intervention_interval[] <- user()
 
   # dimensions - all rely on contact matrix
   dim(lambda_prod) <- c(n, n)
@@ -104,6 +105,7 @@ sir <- odin::odin({
   dim(init_I) <- n
   dim(init_R) <- n
   dim(C) <- c(n, n)
+  dim(intervention_interval) <- 2
 })
 ```
 
@@ -112,6 +114,7 @@ sir <- odin::odin({
 mod <- sir$new(
   beta = 1.3 / 7,
   reduction = 0.1,
+  intervention_interval = c(200, 400),
   C = contact_matrix, n = nrow(contact_matrix),
   init_S = initial_condtions[, 1],
   init_I = initial_condtions[, 2],
