--- a/analyses/forecast_cases/projections_incidence_epitrix.qmd
+++ b/analyses/forecast_cases/projections_incidence_epitrix.qmd
@@ -72,13 +72,11 @@ incidence2_fit <-
 
 # Extract parameter by disease, distribution, author
 epidist_ebola_si <- 
-  epiparameter::epiparam() %>% 
-  filter(str_detect(disease,"Ebola")) %>% 
-  filter(epi_distribution == "serial_interval") %>% 
-  filter(region == "West Africa") %>% 
-  filter(author == "WHO_Ebola_Response_Team") %>% 
-  filter(year == 2015) %>% 
-  epiparameter::as_epidist()
+  epiparameter::epidist_db(
+    disease = "Ebola",
+    epi_dist = "serial_interval",
+    single_epidist = TRUE
+    )
 
 # Read epidist class object
 # Read distribution: gamma
