--- a/analyses/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
+++ b/analyses/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
@@ -43,13 +43,11 @@ incidence_data <- incidence::incidence(linelist$date_of_onset)
 
 # Extract parameter by disease, distribution, author
 epidist_ebola <- 
-  epiparameter::epiparam() %>% 
-  filter(str_detect(disease,"Ebola")) %>% 
-  filter(epi_distribution == "serial_interval") %>% 
-  filter(region == "West Africa") %>% 
-  filter(author == "WHO_Ebola_Response_Team") %>% 
-  filter(year == 2015) %>% 
-  epiparameter::as_epidist()
+  epiparameter::epidist_db(
+    disease = "Ebola",
+    epi_dist = "serial_interval",
+    single_epidist = TRUE
+    )
 
 # Estimate the time-varying reproduction number
 epiestim_output <- estimate_R(
