fix epiparameter output

--- a/analyses/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
+++ b/analyses/quantify_transmission/reproduction_number_timevarying_epiestim_parametric.qmd
@@ -54,8 +54,10 @@ epiestim_output <- estimate_R(
   incid = incidence_data, 
   method = "parametric_si",
   config = make_config(
-    mean_si = epidist_ebola$summary_stats$centre_spread$mean,
-    std_si = epidist_ebola$summary_stats$centre_spread$sd
+    list(
+      mean_si = epidist_ebola$summary_stats$mean,
+      std_si = epidist_ebola$summary_stats$sd
+    )
   )
 )
 
