--- a/analyses/forecast_cases/projections_incidence_epitrix.qmd
+++ b/analyses/forecast_cases/projections_incidence_epitrix.qmd
@@ -143,7 +143,7 @@ reproductive_basic_sample <-
   )
 
 # Plot the sample distribution
-hist(reproductive_basic_sample)
+# hist(reproductive_basic_sample)
 
 # Project the future incidence 
 # from incidence object and sample of basic reproductive number
